# Hoshi

./: .gitignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  txtx.yml
.github/workflows/: ci.yml  dependency-review.yml  eslint.yml
apps/landing/: index.html  package.json
apps/landing/src/: App.tsx  index.css  main.tsx
apps/landing/src/components/: Navigation.tsx  SectionHeader.tsx  TerminalFaultyBackground.tsx  TerminalPanel.tsx
apps/landing/src/hooks/: useCountdown.ts
apps/landing/src/sections/: CTA.tsx  Features.tsx  Hero.tsx  (+6 more)
docs/: manual-smoke-tests.md  t2000-hoshi.md
docs/superpowers/: t2000-feature-inventory.md  t2000-vs-hoshi-gap-matrix.md
docs/superpowers/plans/: 2026-05-09-hoshi-kya-implementation.md  2026-05-09-hoshi-kya-onchain-implementation.md  2026-05-09-hoshi-kya-sdk-wiring-implementation.md  2026-05-09-hoshi-sdk-core-v1-implementation.md  2026-05-09-hoshi-shared-payment-core-implementation.md  2026-05-09-hoshi-t2000-parity-phased-implementation.md
docs/superpowers/specs/: 2026-05-09-hoshi-kya-design.md  2026-05-09-hoshi-kya-onchain-design.md  2026-05-09-hoshi-kya-sdk-wiring-design.md  2026-05-09-hoshi-messaging-design.md  2026-05-09-hoshi-positioning-design.md  2026-05-09-hoshi-sdk-core-bank-account-spec.md  2026-05-09-hoshi-sdk-core-vs-t2000-gap-table.md  2026-05-09-hoshi-shared-payment-core-design.md
programs/hoshi-kya/: Cargo.toml
programs/hoshi-kya/src/: errors.rs  lib.rs  state.rs
runbooks/: README.md
runbooks/deployment/: main.tx
scripts/: core-banking-smoke.mjs
tests/: hoshi-kya.ts
