[package]
name = "hoshi-kya"
version = "0.1.0"
description = "Hoshi KYA onchain registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hoshi_kya"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
